--- a/index.html
+++ b/index.html
@@ -239,9 +239,9 @@
                             <p>Raj is a freshman in the M&T Program studying Computer Science and Finance. He has previously worked at a tech consulting start-up and is involved with the Wharton Investment and Trading Group. During his free time, Raj enjoys golfing, playing squash, and finding new music. </p>
                         </div>
                         <div class="col-lg-3">
-                            <img src="img/santosh.jpg" class="img-responsive" alt="Responsive image">
-                            <h2>Santosh Vallabhaneni</h2>
-                            <p>Santosh is a sophomore in the M&T Program studying Finance and Computer Science. He has previously worked at a health care startup and numerous venture capital firms in India. He has a particular interested in analytics and the internet of things. Outside of the innovation fund, he is involved with the International Affairs Association and loves playing basketball and golf.</p>
+                            <img src="img/megan.jpg" class="img-responsive" alt="Responsive image">
+                            <h2>Megan Kotrappa</h2>
+                            <p>Megan is a freshman in the M&T program studying Bioengineering, Finance, and Management. She is interested in biotechnology, specifically pharmaceutics, and previously worked with a biotech startup in Southern California. In addition to the M&T Innovation Fund, Megan is also involved in Penn Undergraduate Biotech Society Consulting, Club Basketball, and Photography for Penn’s Spoon University Chapter.</p>
                         </div>
                     </div>
                     <div class="row">
