--- a/index.html
+++ b/index.html
@@ -265,9 +265,9 @@
                             <p>Rohun is a junior in the M&T Program studying Electrical Engineering and Operations, Information and Decisions. His interests include product and hardware design, reading about consumer tech, and other developing technologies. He has previously worked as an intern at KPMG's Bangalore office. In his free time, Rohun enjoys skiing and listening to music.</p>
                         </div>
                         <div class="col-lg-3">
-                            <img src="img/jacob.png" class="img-responsive" alt="Responsive image">
+                            <img src="img/jacob.jpg" class="img-responsive" alt="Responsive image">
                             <h2>Jacob Kahn</h2>
-                            <p>Jacob is a sophomore in the M&T Program from the Chicago area studying Computer Science, Statistics, and Finance. He is interested in tech of all shapes and sizes, astrophysics, and the philosophy of science. Currently working on his own startup, he previously worked at a financial technology company, and is an incoming software engineering intern at Facebook. In his free time, Jacob enjoys playing the guitar or piano, following politics and world news, and playing ultimate frisbee.</p>
+                            <p>Jacob is a junior in the M&T Program from the Chicago area studying Computer Science, Business Analytics, and Management. His interests include tech of all shapes and sizes, astrophysics, and the philosophy of science. He previously worked as a software engineer at Facebook, and currently is one of the directors of PennApps. In his free time, Jacob enjoys playing guitar or piano, following politics and world news, and playing ultimate frisbee.</p>
                         </div>
                     </div>
                     <div class="row">
