--- a/index.html
+++ b/index.html
@@ -222,22 +222,17 @@
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-lg-3">
-                            <img src="img/yoni.jpg" class="img-responsive" alt="Responsive image">
-                            <h2>Yoni Dejene</h2>
-                            <p>Yoni is a freshman in the M&T program studying Computer Science and Finance. Before joining the M&T program, he co-founded a VC backed startup based in Silicon Valley. He also co-founded a non-profit that provides seed financing, design services, and web-development to young African entrepreneurs. After graduation, he hopes to return to Ethiopia to start a private equity fund. Yoni enjoys design, chill music and soccer.</p>
-                        </div>
-                        <div class="col-lg-3">
+                        <div class="col-lg-4">
                             <img src="img/akhil.jpg" class="img-responsive" alt="Responsive image">
                             <h2>Akhil Ganti</h2>
-                            <p>Akhil is a freshman in the M&T Program studying Computer Science, Finance, and Entrepreneurial Management. He is especially interested in artificial intelligence and, in particular, natural language processing. In addition to the M&T Innovation Fund, he works as a research assistant in the Wharton Management department and is involved with the Wharton Investment & Trading Group. In his free time, Akhil enjoys playing pool, practicing the piano and saxophone, and reading.</p>
+                            <p>Akhil is a sophomore in the M&T Program studying Computer Science, Finance, Statistics. He is especially interested in artificial intelligence and, in particular, natural language processing. In addition to the M&T Innovation Fund, he works as a research assistant in the Wharton Marketing department and is involved with the Wharton Investment & Trading Group. In his free time, Akhil enjoys playing pool, practicing the piano and saxophone, and reading.</p>
                         </div>
-                        <div class="col-lg-3">
-                            <img src="img/raj.jpg" class="img-responsive" alt="Responsive image">
-                            <h2>Raj Atluri</h2>
-                            <p>Raj is a freshman in the M&T Program studying Computer Science and Finance. He has previously worked at a tech consulting start-up and is involved with the Wharton Investment and Trading Group. During his free time, Raj enjoys golfing, playing squash, and finding new music. </p>
+                        <div class="col-lg-4">
+                            <img src="img/raja.jpg" class="img-responsive" alt="Responsive image">
+                            <h2>Raja Atluri</h2>
+                            <p>Can you change name to Raja Atluri, and the bio: Raja is a junior in the M&T program studying Computer Science, Finance, Business Analytics, and Entrepreneurship & Innovation. He is interested in financial technology and digital media. He has previously worked in growth equity focusing on opportunities in the tech-enabled logistics space and at a search fund. In his free time, he enjoys golfing and finding new music.</p>
                         </div>
-                        <div class="col-lg-3">
+                        <div class="col-lg-4">
                             <img src="img/megan.jpg" class="img-responsive" alt="Responsive image">
                             <h2>Megan Kotrappa</h2>
                             <p>Megan is a freshman in the M&T program studying Bioengineering, Finance, and Management. She is interested in biotechnology, specifically pharmaceutics, and previously worked with a biotech startup in Southern California. In addition to the M&T Innovation Fund, Megan is also involved in Penn Undergraduate Biotech Society Consulting, Club Basketball, and Photography for Penn’s Spoon University Chapter.</p>
@@ -266,7 +261,7 @@
                         <div class="col-lg-3">
                             <img src="img/jacob.jpg" class="img-responsive" alt="Responsive image">
                             <h2>Jacob Kahn</h2>
-                            <p>Jacob is a junior in the M&T Program from the Chicago area studying Computer Science, Business Analytics, and Management. His interests include tech of all shapes and sizes, astrophysics, and the philosophy of science. He previously worked as a software engineer at Facebook, and currently is one of the directors of PennApps. In his free time, Jacob enjoys playing guitar or piano, following politics and world news, and playing ultimate frisbee.</p>
+                            <p>Jacob is a junior in the M&T Program from the Chicago area studying Computer Science, Business Analytics, and Management. His interests include tech of all shapes and sizes, astrophysics, and the philosophy of science. He is a former and future software engineer at Facebook, and was one of the directors of PennApps during the 2016-2017 year. In his free time, Jacob enjoys playing guitar or piano, following politics and world news, and playing ultimate frisbee.</p>
                         </div>
                     </div>
                     <div class="row">
@@ -294,42 +289,6 @@
                             <img src="img/boon.png" class="img-responsive" alt="Responsive image">
                             <h2>Boon Thau Loo</h2>
                             <p>Boon's research focuses on distributed data management systems, Internet-scale query processing, and the application of database technologies to networked systems. He is particularly interested in developing information-centric network architectures that can be easily extended, composed, and formally verified. His recent projects include applying declarative networking techniques in the areas of dynamic network composition, adaptive mobile ad-hoc networks, and scalable knowledge-based networks. He is also exploring novel database-inspired techniques for diagnosing, securing, and verifying network protocols.</p>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <h2>Fund Alumni</h2>
-                        <hr>
-                        <div class="col-lg-4">
-                            <img src="img/anu.png" class="img-responsive" alt="Responsive image">
-                            <h2>Anubhav Maheshwari</h2>
-                            <p>Anubhav (Anu) is a senior in the M&T Program who loves learning about technology companies. During college, he has interned previously at a young Philadelphia internet start up, as well as evaluated and funded student founded startups as Chair of the Weiss Tech House Innovation Fund. After graduation in May 2015, he will be joining Morgan Stanley's Technology Investment Banking team in New York.</p>
-                        </div>
-                        <div class="col-lg-4">
-                            <img src="img/jeff.png" class="img-responsive" alt="Responsive image">
-                            <h2>Jeff Grimes</h2>
-                            <p>Jeff is a senior in the M&T Program studying Computer Science and Entrepreneurial Management. He is an iPhone app developer with three apps on the App Store. After graduating, he will return home to the San Francisco Bay Area and work for Google as a Product Manager. In his free time, Jeff enjoys writing, reading, and the outdoors.</p>
-                        </div>
-                        <div class="col-lg-4">
-                            <img src="img/nina.jpg" class="img-responsive" alt="Responsive image">
-                            <h2>Nina Lu</h2>
-                            <p>Nina is a junior in the M&T program studying Computer Science and Finance. She is a former Apple and Microsoft intern and blogs on Medium about tech. She enjoys late night runs, philosophy, and sourcing new music on SoundCloud.</p>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-lg-4">
-                            <img src="img/karan.jpg" class="img-responsive" alt="Responsive image">
-                            <h2>Karan Hiremath</h2>
-                            <p>Karan is a Junior in the M&T Program studying Computer Science, Management,and Finance from South Jersey. He has previously worked at the Office of Naval Research, a Philadelphia Venture Capital Firm, and on his own startup. He is interested in Entreprise Tech and Machine Learning. Karan enjoys reading, watching tv, listening to music, and cooking in his free time.</p>
-                        </div>
-                        <div class="col-lg-4">
-                            <img src="img/lauren.jpg" class="img-responsive" alt="Responsive image">
-                            <h2>Lauren Reeder</h2>
-                            <p>Lauren is a junior in the M&T Program studying Computer Science, Statistics, and Finance. She has previously worked at an education technology start-up and is also a member of the Dorm Room Fund in Philadelphia. She loves to ski, bike, and travel whenever the opportunity arrises.</p>
-                        </div>
-                        <div class="col-lg-4">
-                            <img src="img/max.png" class="img-responsive" alt="Responsive image">
-                            <h2>Max Isenberg</h2>
-                            <p>Max is a junior in the M&T Program from the San Francisco Bay Area studying Materials Science, Finance, and Entrepreneurial Management. He is interested in alternative energy and cleantech, and hopes to eventually work in a strategic role at a company in either of those industries. In his free time, he enjoys following Major League Baseball, running on treadmills while listening to indie rock, and eating at different Philly restaurants.</p>
                         </div>
                     </div>
                 </div>
