--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
                         <div class="col-lg-4">
                             <img src="img/raja.jpg" class="img-responsive" alt="Responsive image">
                             <h2>Raja Atluri</h2>
-                            <p>Can you change name to Raja Atluri, and the bio: Raja is a junior in the M&T program studying Computer Science, Finance, Business Analytics, and Entrepreneurship & Innovation. He is interested in financial technology and digital media. He has previously worked in growth equity focusing on opportunities in the tech-enabled logistics space and at a search fund. In his free time, he enjoys golfing and finding new music.</p>
+                            <p>Raja is a junior in the M&T program studying Computer Science, Finance, Business Analytics, and Entrepreneurship & Innovation. He is interested in financial technology and digital media. He has previously worked in growth equity focusing on opportunities in the tech-enabled logistics space and at a search fund. In his free time, he enjoys golfing and finding new music.</p>
                         </div>
                         <div class="col-lg-4">
                             <img src="img/megan.jpg" class="img-responsive" alt="Responsive image">
