--- a/index.html
+++ b/index.html
@@ -94,10 +94,10 @@
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2">
                     <h1>About the M&T Innovation Fund</h1>
-                    <p>The <strong>M&T Innovation Fund</strong> is a new, University and M&T Program backed student run organization looking to provide non-equity grants for seed-stage ventures started by current Penn students or recent M&T alumni. Grants will range from <strong>$1000 to $5000.</strong></p>
-                    <p>The Fund is managed and operated by current M&T students from all class years. Faculty advisers, M&T Program administration, and M&T alumni act as support for the Fund. Current students work for either the <strong>Investment team</strong> or the <strong>Value Creation team.</strong></p>
-                    <p>The <strong>Investment team</strong> sources ventures, conducts due diligence, and makes the final investment decisions. A rigorous evaluation process allows the Fund to target high quality, technical ventures.</p>
-                    <p>The <strong>Value Creation team</strong> acts as consultants for each backed venture. The Value Creation team provides insights into evaluating new markets, growing customer bases, developing and commercializing technologies, and connecting teams with mentors, legal advisors, and additional funding. </p>
+                    <p>The <strong>M&T Innovation Fund</strong> is a University- and M&T-backed student run organization looking to provide value creation for seed-stage ventures. Along with value creation tasks, non-equity grants will be provided for specific expenses.</strong></p>
+                    <p>The Fund is managed and operated by current M&T students from all class years. Faculty advisers, M&T Program administration, and M&T alumni act as support for the Fund.</p>
+                    <p>The Fund is similar to an incubator or accelerator. Candidate ventures should be as interested in the value creation tasks as they are in the non-equity grants. Grants may total as much as ~$3000.</p>
+                    <p>The Fund will only give out grant money for expenses that are 1) specific, 2) near-term, and 3) related to the value creation tasks in which the Fund takes part. That is, the Fund is not interested in handing out non-equity grants for "black box" expenses, or for expenses a venture anticipates having in a year's time.</p>
                 </div>
             </div>
         </section>
