--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                     <p>The <strong>M&T Innovation Fund</strong> is a University- and M&T-backed student run organization looking to provide value creation for seed-stage ventures. Along with value creation tasks, non-equity grants will be provided for specific expenses.</strong></p>
                     <p>The Fund is managed and operated by current M&T students from all class years. Faculty advisers, M&T Program administration, and M&T alumni act as support for the Fund.</p>
                     <p>The Fund is similar to an incubator or accelerator. Candidate ventures should be as interested in venture development as they are in the non-equity grants. Grants may total as much as ~$3000.</p>
-                    <p>The Fund will only give out grant money for expenses that are 1) specific, 2) near-term, and 3) related to the value creation tasks in which the Fund takes part. That is, the Fund is not interested in handing out non-equity grants for "black box" expenses, or for expenses a venture anticipates having in a year's time.</p>
+                    <p>The Fund will only give out grant money for expenses that are 1) specific, 2) near-term, and 3) related to the venture development in which the Fund is involved. That is, the Fund is not interested in handing out non-equity grants for "black box" expenses, or for expenses a venture anticipates having in a year's time.</p>
                 </div>
             </div>
         </section>
