--- a/index.html
+++ b/index.html
@@ -186,9 +186,9 @@
                 <div class="container text-box">
                     <div class="col-lg-8 col-lg-offset-2">
                         <h1>Apply Now</h1>
-                        <p>Are you a current Penn student (undergraduate or graduate) or a recent M&T alum with an idea you’d like us to consider funding? </p>
+                        <p>Are you a current Penn student (undergraduate or graduate), recent M&T alum, or Penn-affiliated employee or professor with an idea you’d like us to consider funding? </p>
                         <br/>
-                        <p>Submit your information below! Our next application deadline will be in late February, so you can expect to hear back from us about next steps then.</p>
+                        <p>Submit your information below! This round has a deadline of October 14th. We will hold a second round of funding in late February.</p>
                         <a href="apply/index.html" class="btn btn-default btn-lg">Apply Now</a>
                         <!-- <p>Are you a current Penn student (undergraduate or graduate) or a recent M&T alum with an idea you’d like us to consider funding? Look out for applications to be funded by the M&T Innovation Fund soon!</p> -->
                     </div>
