--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
         <meta http-equiv="pragma" content="no-cache" />
         <!-- end cache control -->
-        <title>M&T Innovation Fund</title>
+        <title>Jerome Fisher M&T Innovation Fund</title>
         <!-- Bootstrap Core CSS -->
         <link href="css/bootstrap.min.css" rel="stylesheet">
 
