basic content changes and faq section

--- a/index.html
+++ b/index.html
@@ -179,6 +179,8 @@
                     </div>
                 </div>
             </div>
+            <br><br>
+            </div>
         </section>
         <!-- About Section -->
         <section id="apply" class="container content-section text-center black">
@@ -194,6 +196,108 @@
                     </div>
                 </div>
             </div>
+        </section>
+        <!-- FAQ Section -->
+        <section id="faq" class="content-section text-center white">
+            <div class="row">
+                <div class="col-lg-8 col-lg-offset-2">
+                    <h1> FAQ </h1>
+                    <hr>
+                    <div class="col-lg-6">
+                        <div id="accordion">
+                              <div class="card">
+                                <div class="card-header" id="headingOne">
+                                  <h5 class="mb-0">
+                                    <button class="btn btn-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                                      How do I know if I am a good candidate?
+                                    </button>
+                                  </h5>
+                                </div>
+
+                                <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
+                                  <div class="card-body">
+                                    As long as you aren't nursing or the college
+                                  </div>
+                                </div>
+                              </div>
+                              <div class="card">
+                                <div class="card-header" id="headingTwo">
+                                  <h5 class="mb-0">
+                                    <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                                      Collapsible Group Item #2
+                                    </button>
+                                  </h5>
+                                </div>
+                                <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
+                                  <div class="card-body">
+                                    Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+                                  </div>
+                                </div>
+                              </div>
+                              <div class="card">
+                                <div class="card-header" id="headingThree">
+                                  <h5 class="mb-0">
+                                    <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                                      Collapsible Group Item #3
+                                    </button>
+                                  </h5>
+                                </div>
+                                <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordion">
+                                  <div class="card-body">
+                                    Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+                                  </div>
+                                </div>
+                              </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-6">
+                                                <div id="accordion">
+                              <div class="card">
+                                <div class="card-header" id="headingOne">
+                                  <h5 class="mb-0">
+                                    <button class="btn btn-link" data-toggle="collapse" data-target="#collapse1" aria-expanded="true" aria-controls="collapse1">
+                                      How do I know if I am a good candidate?
+                                    </button>
+                                  </h5>
+                                </div>
+
+                                <div id="collapse1" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
+                                  <div class="card-body">
+                                    As long as you aren't nursing or the college
+                                  </div>
+                                </div>
+                              </div>
+                              <div class="card">
+                                <div class="card-header" id="headingTwo">
+                                  <h5 class="mb-0">
+                                    <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapse2" aria-expanded="false" aria-controls="collapse2">
+                                      Collapsible Group Item #2
+                                    </button>
+                                  </h5>
+                                </div>
+                                <div id="collapse2" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
+                                  <div class="card-body">
+                                    Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+                                  </div>
+                                </div>
+                              </div>
+                              <div class="card">
+                                <div class="card-header" id="headingThree">
+                                  <h5 class="mb-0">
+                                    <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapse3" aria-expanded="false" aria-controls="collapse3">
+                                      Collapsible Group Item #3
+                                    </button>
+                                  </h5>
+                                </div>
+                                <div id="collapse3" class="collapse" aria-labelledby="headingThree" data-parent="#accordion">
+                                  <div class="card-body">
+                                    Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+                                  </div>
+                                </div>
+                              </div>
+                        </div>
+                    </div>
+                </div>
         </section>
         <!-- Team Section -->
         <section id="team" class="content-section text-center white">
@@ -239,50 +343,6 @@
                         </div>
                     </div>
                     <div class="row">
-                        <h2>The Value Creation Team</h2>
-                        <hr>
-                        <div class="col-lg-3">
-                            <img src="img/reuben.jpg" class="img-responsive" alt="Responsive image">
-                            <h2>Reuben Abraham</h2>
-                            <p>Reuben is a sophomore in the M&T Program studying Computer Science, Management, and Finance. He has previously worked as a Residential Teaching Assistant for M&TSI and as an intern at Polarcus Inc, an Oil and Gas Exploration Company in Dubai. In his free time, he enjoys playing cricket, discovering new music, and playing video games.</p>
-                        </div>
-
-                        <div class="col-lg-3">
-                            <img src="img/sam.jpg" class="img-responsive" alt="Responsive image">
-                            <h2>Sam Burns</h2>
-                            <p>Sam is currently a freshman in the M&T Program studying Materials Engineering and Business Analytics. She's worked with several entrepreneurial incubators in the past including the Martin Trust Center at MIT and the Weiss Tech House at Penn. In addition to the M&T Innovation Fund, she is a Project Manager on the Weiss Tech House Innovation Fund, Corporate Committee member on the M&T Board, and a member of the Penn Mock Trial Team. She also works on an entrepreneurial finance research team at Wharton.</p>
-                        </div>
-
-                        <div class="col-lg-3">
-                            <img src="img/rohun.jpg" class="img-responsive" alt="Responsive image">
-                            <h2>Rohun Patel</h2>
-                            <p>Rohun is a junior in the M&T Program studying Electrical Engineering and Operations, Information and Decisions. His interests include product and hardware design, reading about consumer tech, and other developing technologies. He has previously worked as an intern at KPMG's Bangalore office. In his free time, Rohun enjoys skiing and listening to music.</p>
-                        </div>
-                        <div class="col-lg-3">
-                            <img src="img/jacob.jpg" class="img-responsive" alt="Responsive image">
-                            <h2>Jacob Kahn</h2>
-                            <p>Jacob is a junior in the M&T Program from the Chicago area studying Computer Science, Business Analytics, and Management. His interests include tech of all shapes and sizes, astrophysics, and the philosophy of science. He is a former and future software engineer at Facebook, and was one of the directors of PennApps during the 2016-2017 year. In his free time, Jacob enjoys playing guitar or piano, following politics and world news, and playing ultimate frisbee.</p>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-lg-4">
-                            <img src="img/frank.png" class="img-responsive" alt="Responsive image">
-                            <h2>Frank Fan</h2>
-                            <p>Fangyi (Frank) is a freshman in the M&T Program studying Electrical Engineering and Finance. He is interested in hardware design and artificial intelligence. He has worked at Bosch before, the world's largest supplier of automotive components. Besides M&T Innovation Fund, he is involved with the Technology Entrepreneurship Club, Wharton Asia Exchange, and a Chinese A Capella. He enjoys outdoor adventures and playing the accordion.</p>
-                        </div>
-                      <div class="col-lg-4">
-                          <img src="img/sina.png" class="img-responsive" alt="Responsive image">
-                          <h2>Sina Golkari</h2>
-                          <p>Sina is freshman in the M&T Program studying Mechanical Engineering, Entrepreneurial Management, and Finance. His interests include product design, automotive engineering, and biotechnology. In the past, he worked for a medical device startup in the Boston area. On campus, he is also a member of the Penn Electric Racing team.</p>
-                      </div>
-
-                      <div class="col-lg-4">
-                        <img src="img/micah.png" class="img-responsive" alt="Responsive image">
-                        <h2>Micah Zirn</h2>
-                        <p>Micah is a freshman in the M&T program studying Computer Science and Finance and seeking a minor in nanotechnology. He is interested in iOS development and ran track competitively in high school. He previously interned at ARCOM capital, a natural gas commodity trading firm. In addition to the M&T Innovation Fund, Micah spends time with the Wharton Undergraduate Entrepreneurship Club and the Penn Innovation Conference.</p>
-                      </div>
-                    </div>
-                    <div class="row">
                         <h2>Faculty Advisors</h2>
                         <hr>
                         <div class="col-lg-6 col-lg-offset-3">
@@ -299,7 +359,7 @@
                     <div class="col-lg-8 col-lg-offset-2">
                         <h2>Contact Us</h2>
                         <p>Want to learn more about the M&T Innovation Fund? Interested in participating in the Fund as a sponsor or mentor? Please feel free to reach out to us with your questions and inquiries.</p>
-                        <p><a href="mailto:info@mandtinnovationfund.com">info@mandtinnovationfund.com</a>
+                        <p><a href="mailto:info@mandtinnovationfund.com">mandtinnovationfund@gmail.com</a>
                     </p>
                     <ul class="list-inline banner-social-buttons">
                         <li>
@@ -323,8 +383,7 @@
                         </h4>
                         <p>3537 Locust Walk<br>Philadelphia, PA 19104</p>
                         <ul class="list-unstyled">
-                            <li><i class="fa fa-phone fa-fw"></i> (123) 456-7890</li>
-                            <li><i class="fa fa-envelope-o fa-fw"></i>  <a href="mailto:info@mandtinnovationfund.com">info@mandtinnovationfund.com</a>
+                            <li><i class="fa fa-envelope-o fa-fw"></i>  <a href="mailto:info@mandtinnovationfund.com">mandtinnovationfund@gmail.com</a>
                         </li>
                     </ul>
                     <ul class="list-inline banner-social-buttons">
@@ -336,7 +395,7 @@
                         </li>
                     </ul>
                     <hr class="small">
-                    <p class="text-muted">Copyright &copy; M&amp;T Innovation Fund 2014</p>
+                    <p class="text-muted">Copyright &copy; M&amp;T Innovation Fund 2018</p>
                 </div>
             </div>
         </div>
