updated application link

--- a/index.html
+++ b/index.html
@@ -120,9 +120,13 @@
                     <h1>Portfolio</h1>
                     <hr>
                     <div class="row">
-                        <div class="col-lg-6 col-lg-offset-3">
+                        <div class="col-lg-6">
                             <img src="img/groupk.png">
                             <p><a href="https://www.groupkdiagnostics.com/">Group K Diagnostics</a> is working to develop a multi-test modular point-of-care (POC) diagnostic device that offers accurate, fast, and affordable diagnoses. The aim to reduce and eliminate the delay in clinical decisions caused by lab tests and prevent mis-reporting of abnormal results. Group K’s first test solution for Liver Function Testing has been submitted to the FDA, and they are working on bench trials for their Comprehensive Metabolic Panel and Liver Cancer Diagnostic.</p>
+                        </div>
+                        <div class="col-lg-6">
+                            <img src="img/arium.png">
+                            <p><a href="https://arium.io/">Arium</a> offers a convenient platform where lenders can easily collect, verify, and analyze bank statements. Users can search through transactions, identify overdrafts, estimate revenue, and more with information updated in real time. Arium is able to access financial information and verified transactions from major banks and institutions in the US, including Wells Fargo, Bank of America, and PNC. </p>
                         </div>
                     </div>
                     <div class="row">
@@ -135,30 +139,6 @@
                             <p><a href="https://www.plasticity.ai/">Plasticity</a> is working to make robotic chat conversations feel human through a Natural Language Processing (NLP) system that learns concepts and conversation from real world contexts. Their product is API called Sapien that packages this powerful natural language capability for use in conversational interfaces and rich content development. Two other APIs, Lingua and Brevis, are also in the works and to be released. </p>
                         </div>
                     </div>
-                    <div class="row">
-                        <div class="col-lg-4">
-                            <img src="img/arium.png">
-                            <p><a href="https://arium.io/">Arium</a> offers a convenient platform where lenders can easily collect, verify, and analyze bank statements. Users can search through transactions, identify overdrafts, estimate revenue, and more with information updated in real time. Arium is able to access financial information and verified transactions from major banks and institutions in the US, including Wells Fargo, Bank of America, and PNC. </p>
-                        </div>
-                        <div class="col-lg-4">
-                            <img src="img/oncora.png">
-                            <p><a href="http://oncoramedical.com/">Oncora Medical</a> is the first commercial predictive analytics platform for radiation oncology. Oncora applies cutting edge machine learning techniques to leverage historical patient data, advanced imaging data, insurance claims data, and specific radiation dose information to help physicians provide the best possible treatments for cancer patients.</p>
-                        </div>
-                        <div class="col-lg-4">
-                            <img src="img/gtrack.png">
-                            <p><a href="http://www.gtracktechnologies.com">GTrack Technologies</a> is developing novel chemical tracers for use in reservoir characterization in the oil and gas industry. These tracers are cheap, safe, and incredibly accurate in measuring reservoir data to increase oil extraction efficiency.</p>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-lg-6">
-                            <img src="img/clv.png">
-                            <p><a href="http://www.clvmetrics.com/">CLVMetrics</a> is a web-based platform that implements/extends cutting-edge models developed/popularized by co-founder Professor Peter Fader. Their web application estimates and forecasts CLV and related metrics for every customer. It is fast, simple, and seamlessly integrates with firms’ existing CRM and transaction systems, providing valuable insights that enable immediate action. CLVMetrics helps firms leverage their existing data assets to better achieve customer-centric success.</p>
-                        </div>
-                        <div class="col-lg-6">
-                            <img src="img/leapyear.png">
-                            <p><a href="http://leapyear.io">LeapYear</a> is an enterprise platform for securely computing on sensitive data. Leveraging the latest research in machine learning and cryptography, LeapYear enables organizations to utilize all of their data assets with proven assurances of privacy and security.</p>
-                        </div>
-                    </div>
                 </div>
             </div>
         </div>
@@ -169,15 +149,15 @@
                 <p>The M&T Innovation Fund is supported by the University of Pennsylvania, the Jerome Fisher Management and Technology Program, and M&T alumni as well as various corporate sponsors.
                 </p>
                 <div class="row">
-                    <div class="col-lg-4">
+                    <div class="col-lg-6">
                         <img src="img/penn_full.png">
                     </div>
-                    <div class="col-lg-4">
+                    <div class="col-lg-6">
                         <img src="img/mnt.png">
                     </div>
-                    <div class="col-lg-4">
+<!--                     <div class="col-lg-4">
                         <img src="img/aws.png">
-                    </div>
+                    </div> -->
                 </div>
             </div>
             <br><br>
@@ -191,8 +171,8 @@
                         <h1>Apply Now</h1>
                         <p>Are you a current Penn student (undergraduate or graduate), recent M&T alum, or Penn-affiliated employee or professor with an idea you’d like us to consider funding? </p>
                         <br/>
-                        <p>Submit your information below! This round has a deadline of October 14th. We will hold a second round of funding in late February.</p>
-                        <a href="apply/index.html" class="btn btn-default btn-lg">Apply Now</a>
+                        <p>Submit your information below! This round has a deadline of October 9th. We will hold a second round of funding in late February.</p>
+                        <a href="https://mandtinnovationfund.typeform.com/to/A3I9LT" class="btn btn-default btn-lg">Apply Now</a>
                         <!-- <p>Are you a current Penn student (undergraduate or graduate) or a recent M&T alum with an idea you’d like us to consider funding? Look out for applications to be funded by the M&T Innovation Fund soon!</p> -->
                     </div>
                 </div>
