--- a/index.html
+++ b/index.html
@@ -312,11 +312,15 @@
                             <h3>Varun Ramakrishnan</h3>
                         </div>
                         <div class="col-lg-4">
-                            <img src="img/cole.jpg" class="img-responsive" alt="Responsive image">
-                            <h3>Cole Hersowitz</h3>
+                            <img src="img/leo.jpg" class="img-responsive">
+                            <h3>Leo Vigna</h3>
                         </div>
                     </div>
                     <div class="row">
+                        <div class="col-lg-4">
+                            <img src="img/cole.jpg" class="img-responsive" alt="Responsive image">
+                            <h3>Cole Hersowitz</h3>
+                        </div>
                         <div class="col-lg-4">
                             <img src="img/george.jpg" class="img-responsive" alt="Responsive image">
                             <h3>George Feng</h3>
@@ -324,6 +328,16 @@
                         <div class="col-lg-4">
                             <img src="img/robin.jpg" class="img-responsive" alt="Responsive image">
                             <h3>Robin Tan</h3>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-lg-4 col-lg-offset-2">
+                            <img src="img/jonathan.jpg" class="img-responsive">
+                            <h3>Jonathan Kogan</h3>
+                        </div>
+                        <div class="col-lg-4">
+                            <img src="img/rohit.jpg" class="img-responsive">
+                            <h3>Rohit Majumdar</h3>
                         </div>
                     </div>
                     <br><br><br>
