--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
         <meta http-equiv="pragma" content="no-cache" />
         <!-- end cache control -->
         <title>Jerome Fisher M&T Innovation Fund</title>
+        <!-- favicon, put in img folder -->
+        <link rel="shortcut icon" href="img/favicon.ico">
         <!-- Bootstrap Core CSS -->
         <link href="css/bootstrap.min.css" rel="stylesheet">
 
@@ -171,7 +173,7 @@
                         <h1>Apply Now</h1>
                         <p>Are you a current Penn student (undergraduate or graduate), recent M&T alum, or Penn-affiliated employee or professor with an idea you’d like us to consider funding? </p>
                         <br/>
-                        <p>Submit your information below! This round has a deadline of October 9th. We will hold a second round of funding in late February.</p>
+                        <p>Submit your information below! This round has a deadline of February 13th. </p>
                         <a href="https://mandtinnovationfund.typeform.com/to/A3I9LT" class="btn btn-default btn-lg">Apply Now</a>
                         <!-- <p>Are you a current Penn student (undergraduate or graduate) or a recent M&T alum with an idea you’d like us to consider funding? Look out for applications to be funded by the M&T Innovation Fund soon!</p> -->
                     </div>
@@ -303,8 +305,8 @@
                     </div>
                     <div class="row">
                         <div class="col-lg-4">
-                            <img src="img/eric.jpg" class="img-responsive" alt="Responsive image">
-                            <h3>Eric Liu</h3>
+                            <img src="img/sheila.jpg" class="img-responsive" alt="Responsive image">
+                            <h3>Sheila Gaur</h3>
                         </div>
                         <div class="col-lg-4">
                             <img src="img/varun.jpg" class="img-responsive" alt="Responsive image">
@@ -331,16 +333,8 @@
                     </div>
                     <div class="row">
                         <div class="col-lg-4">
-                            <img src="img/christopher.jpg" class="img-responsive">
-                            <h3> Christopher Lee </h3>
-                        </div>
-                        <div class="col-lg-4">
-                            <img src="img/jonathan.jpg" class="img-responsive">
-                            <h3>Jonathan Kogan</h3>
-                        </div>
-                        <div class="col-lg-4">
-                            <img src="img/rohit.jpg" class="img-responsive">
-                            <h3>Rohit Majumdar</h3>
+                            <img src="img/maanasi.jpg" class="img-responsive" alt="Responsive image">
+                            <h3>Maanasi Garg</h3>
                         </div>
                     </div>
                     <br><br><br>
