--- a/index.html
+++ b/index.html
@@ -304,37 +304,82 @@
                         </div>
                     </div>
                     <div class="row">
+                        <hr>
                         <div class="col-lg-4">
-                            <img src="img/sheila.jpg" class="img-responsive" alt="Responsive image">
-                            <h3>Sheila Gaur</h3>
-                        </div>
-                        <div class="col-lg-4">
-                            <img src="img/varun.jpg" class="img-responsive" alt="Responsive image">
-                            <h3>Varun Ramakrishnan</h3>
-                        </div>
-                        <div class="col-lg-4">
-                            <img src="img/leo.jpg" class="img-responsive">
+                            <img src="img/Leo.jpg" class="img-responsive" alt="Responsive image">
                             <h3>Leo Vigna</h3>
+                        </div>
+                        <div class="col-lg-4">
+                            <img src="img/Jonathan.png" class="img-responsive" alt="Responsive image">
+                            <h3>Jonathan Kogan</h3>
+                        </div>
+                        <div class="col-lg-4">
+                            <img src="img/maanasi.jpg" class="img-responsive" alt="Responsive image">
+                            <h3>Maanasi Garg</h3>
                         </div>
                     </div>
                     <div class="row">
+                        <hr>
+                        <div class="col-lg-4">
+                            <img src="img/rohit.jpg" class="img-responsive" alt="Responsive image">
+                            <h3>Rohit Majumdar</h3>
+                        </div>
+                        <div class="col-lg-4">
+                            <img src="img/Pranshu.JPG" class="img-responsive" alt="Responsive image">
+                            <h3>Pranshu Suri</h3>
+                        </div>
                         <div class="col-lg-4">
                             <img src="img/cole.jpg" class="img-responsive" alt="Responsive image">
                             <h3>Cole Hersowitz</h3>
                         </div>
+                    </div>
+                    <div class="row">
+                        <hr>
                         <div class="col-lg-4">
-                            <img src="img/george.jpg" class="img-responsive" alt="Responsive image">
-                            <h3>George Feng</h3>
+                            <img src="img/Srisa.jpg" class="img-responsive" alt="Responsive image">
+                            <h3>Srisa Changolkar</h3>
                         </div>
                         <div class="col-lg-4">
-                            <img src="img/robin.jpg" class="img-responsive" alt="Responsive image">
-                            <h3>Robin Tan</h3>
+                            <img src="img/Alex.JPG" class="img-responsive" alt="Responsive image">
+                            <h3>Alex Carbonell</h3>
+                        </div>
+                        <div class="col-lg-4">
+                            <img src="img/Aryan.JPG" class="img-responsive" alt="Responsive image">
+                            <h3>Aryan Chauhan</h3>
                         </div>
                     </div>
                     <div class="row">
                         <div class="col-lg-4">
-                            <img src="img/maanasi.jpg" class="img-responsive" alt="Responsive image">
-                            <h3>Maanasi Garg</h3>
+                            <img src="img/Cindy.JPG" class="img-responsive" alt="Responsive image">
+                            <h3>Cindy Jiang</h3>
+                        </div>
+                        <div class="col-lg-4">
+                            <img src="img/Daniel_B.png" class="img-responsive" alt="Responsive image">
+                            <h3>Daniel Bessonov</h3>
+                        </div>
+                        <div class="col-lg-4">
+                            <img src="img/Daniel_T.JPG" class="img-responsive">
+                            <h3>Daniel Tian</h3>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-lg-4">
+                            <img src="img/Kush.jpg" class="img-responsive" alt="Responsive image">
+                            <h3>Kush Pandey</h3>
+                        </div>
+                        <div class="col-lg-4">
+                            <img src="img/savan.jpeg" class="img-responsive" alt="Responsive image">
+                            <h3>Savan Patel</h3>
+                        </div>
+                        <div class="col-lg-4">
+                            <img src="blank.jpg" class="img-responsive" alt="Responsive image">
+                            <h3>Sriram Tolety</h3>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-lg-4">
+                            <img src="img/YanLing.png" class="img-responsive" alt="Responsive image">
+                            <h3>Yan Ling Chen</h3>
                         </div>
                     </div>
                     <br><br><br>
