--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@
                             <h3>Alex Carbonell</h3>
                         </div>
                         <div class="col-lg-4">
-                            <img src="img/Aryan.JPG" class="img-responsive" alt="Responsive image">
+                            <img src="blank.jpg" class="img-responsive" alt="Responsive image">
                             <h3>Aryan Chauhan</h3>
                         </div>
                     </div>
@@ -372,7 +372,7 @@
                             <h3>Savan Patel</h3>
                         </div>
                         <div class="col-lg-4">
-                            <img src="blank.jpg" class="img-responsive" alt="Responsive image">
+                            <img src="sriram.jpg" class="img-responsive" alt="Responsive image">
                             <h3>Sriram Tolety</h3>
                         </div>
                     </div>
