--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@
                             <h3>Savan Patel</h3>
                         </div>
                         <div class="col-lg-4">
-                            <img src="sriram.jpg" class="img-responsive" alt="Responsive image">
+                            <img src="img/sriram.jpg" class="img-responsive" alt="Responsive image">
                             <h3>Sriram Tolety</h3>
                         </div>
                     </div>
