--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@
                             <h3>Kush Pandey</h3>
                         </div>
                         <div class="col-lg-4">
-                            <img src="img/savan.jpeg" class="img-responsive" alt="Responsive image">
+                            <img src="img/savan_2.jpg" class="img-responsive" alt="Responsive image">
                             <h3>Savan Patel</h3>
                         </div>
                         <div class="col-lg-4">
