--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
                     <div class="row">
                         <hr>
                         <div class="col-lg-4">
-                            <img src="img/Srisa.jpg" class="img-responsive" alt="Responsive image">
+                            <img src="img/srisa_2.jpg" class="img-responsive" alt="Responsive image">
                             <h3>Srisa Changolkar</h3>
                         </div>
                         <div class="col-lg-4">
